--- a/introduction.ipynb
+++ b/introduction.ipynb
@@ -563,17 +563,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the dataset has:\n",
+      "\t* 25 rows.\n",
+      "\t* 2 columns.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# code goes here \n",
+    "print(f\"the dataset has:\\n\\t* 25 rows.\\n\\t* 2 columns.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conditions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "1. Write a program that determines whether a number is even or odd. Print a message indicating whether the number is even or odd."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23 is an odd number\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = int(input(\"Enter a positive number: \"))\n",
+    "if num % 2 != 0:\n",
+    "    print(f\"{num} is an odd number\") \n",
+    "else:\n",
+    "    print(f\"{num} is an even number\") "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "2. Write a program that checks if a given year is a leap year. A leap year is divisible by 4, but not divisible by 100, except if its divisible by 400."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# code goes here "
+    "year = int(input(\"Enter a year: \"))\n",
+    "if year % 4 == 0 & year % 100 ==0:\n",
+    "    if year % 400 !=0:\n",
+    "        print(f\"{year} is a leap year\")\n",
+    "else:\n",
+    "    print(f\"{year} is not a leap year\") \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. Write a program that will use age to determine the price of a movie theater.\n",
+    "\n",
+    "    Age < 13  price Ksh 400\n",
+    "    13 <= Age <=17 Ksh 600\n",
+    "    18 <= Age 65 <= Ksh 800\n",
+    "    Age > 65 Ksh 350"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
