added assignment two

--- a/introduction.ipynb
+++ b/introduction.ipynb
@@ -627,9 +627,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2032 is a leap year\n"
+     ]
+    }
+   ],
    "source": [
     "year = int(input(\"Enter a year: \"))\n",
     "if year % 4 == 0 & year % 100 ==0:\n",
@@ -649,6 +657,31 @@
     "    13 <= Age <=17 Ksh 600\n",
     "    18 <= Age 65 <= Ksh 800\n",
     "    Age > 65 Ksh 350"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ksh 350\n"
+     ]
+    }
+   ],
+   "source": [
+    "age = int(input(\"Enter age: \"))\n",
+    "if age < 13:\n",
+    "    print(f\"Ksh 400\")\n",
+    "elif age >= 13 and age <= 17:\n",
+    "    print(f\"Ksh 600\")\n",
+    "elif age >= 18 and age <= 65:\n",
+    "    print(f\"Ksh 800\")\n",
+    "else:\n",
+    "    print(f\"Ksh 350\")\n"
    ]
   }
  ],
