--- a/conditions.ipynb
+++ b/conditions.ipynb
@@ -46,24 +46,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2032 is a leap year\n"
+      "1800 is not a leap year\n"
      ]
     }
    ],
    "source": [
     "year = int(input(\"Enter a year: \"))\n",
-    "if year % 4 == 0 & year % 100 ==0:\n",
-    "    if year % 400 !=0:\n",
+    "if year % 4 == 0:\n",
+    "    if year % 100 == 0:\n",
+    "        if year % 400 ==0:\n",
+    "            print(f\"{year} is a leap year\")\n",
+    "        else:\n",
+    "            print(f\"{year} is not a leap year\")\n",
+    "    else:\n",
     "        print(f\"{year} is a leap year\")\n",
     "else:\n",
-    "    print(f\"{year} is not a leap year\") \n"
+    "    print(f\"{year} is not a leap year\") "
    ]
   },
   {
@@ -105,8 +110,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
