dict lab submission

--- a/dictionaries.ipynb
+++ b/dictionaries.ipynb
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
        "Index(['City', 'Country', 'Population', 'Area'], dtype='object')"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,22 +258,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'City': 'Solta', 'Country': 'Croatia', 'Population': 1700, 'Area': 59}"
+       "12"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cities[0]"
+    "len(cities)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#First, access the third to last element and set it equal to the variable salina.\n",
+    "cities[9]['City'] = 'salina'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'City': 'Los Cabos', 'Country': 'Mexico', 'Population': 287651, 'Area': 3750}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cities[9]"
    ]
   },
   {
@@ -282,8 +312,79 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for k, v in cities[0]:\n",
-    "    print(k)"
+    "#Now access the fourth city in the list, and set its population equal to a variable called los_cabos_pop.\n",
+    "cities[3]['Population'] ='los_cabos_pop'\n",
+    "cities[3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Now calculate the number of cities in the list and assign the number to the variable city_count\n",
+    "city_count = len(cities)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Finally, change the spelling of the South Korean city, Pyeongchang, to the string 'PyeongChang', its alternative spelling.\n",
+    "cities[11]['City'] = 'PyeongChang'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pyeongchang_values = list(cities[11].values())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#And now set pyeongchang_keys equal to a list of keys in the dictionary regarding Pyeongchang.\n",
+    "pyeongchang_keys = list(cities[11].keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['City', 'Country', 'Population', 'Area']"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pyeongchang_keys"
    ]
   }
  ],
