added more comments

--- a/sample_data.ipynb
+++ b/sample_data.ipynb
@@ -5,8 +5,8 @@
       "execution_count": 3,
       "id": "e1cc8931-3be0-416a-bea3-f8dea2c06ecb",
       "metadata": {
-        "tags": [],
-        "id": "e1cc8931-3be0-416a-bea3-f8dea2c06ecb"
+        "id": "e1cc8931-3be0-416a-bea3-f8dea2c06ecb",
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -20,23 +20,23 @@
       "execution_count": 4,
       "id": "24480eb8-8dfe-40aa-a44b-86d53613c9fe",
       "metadata": {
-        "tags": [],
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "24480eb8-8dfe-40aa-a44b-86d53613c9fe",
-        "outputId": "6841e7e7-2b35-4c8f-e32a-80652493658b"
+        "outputId": "6841e7e7-2b35-4c8f-e32a-80652493658b",
+        "tags": []
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "38"
             ]
           },
+          "execution_count": 4,
           "metadata": {},
-          "execution_count": 4
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -56,8 +56,8 @@
       "execution_count": null,
       "id": "3c8271d9-a867-41bd-9644-ef159706a85f",
       "metadata": {
-        "tags": [],
-        "id": "3c8271d9-a867-41bd-9644-ef159706a85f"
+        "id": "3c8271d9-a867-41bd-9644-ef159706a85f",
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -70,8 +70,8 @@
       "execution_count": null,
       "id": "49ccd505-4fd8-422a-8041-f57329648e09",
       "metadata": {
-        "tags": [],
-        "id": "49ccd505-4fd8-422a-8041-f57329648e09"
+        "id": "49ccd505-4fd8-422a-8041-f57329648e09",
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -84,8 +84,8 @@
       "execution_count": null,
       "id": "ec2954f9-9fc0-426d-9451-2857c7fdf4e2",
       "metadata": {
-        "tags": [],
-        "id": "ec2954f9-9fc0-426d-9451-2857c7fdf4e2"
+        "id": "ec2954f9-9fc0-426d-9451-2857c7fdf4e2",
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -98,8 +98,8 @@
       "execution_count": null,
       "id": "f0c06fb6-36c3-459c-8905-d72a8c921aee",
       "metadata": {
-        "tags": [],
-        "id": "f0c06fb6-36c3-459c-8905-d72a8c921aee"
+        "id": "f0c06fb6-36c3-459c-8905-d72a8c921aee",
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -112,8 +112,8 @@
       "execution_count": null,
       "id": "28fac224-89a1-42b0-9acb-53b2f4ef8bed",
       "metadata": {
-        "tags": [],
-        "id": "28fac224-89a1-42b0-9acb-53b2f4ef8bed"
+        "id": "28fac224-89a1-42b0-9acb-53b2f4ef8bed",
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -126,8 +126,8 @@
       "execution_count": null,
       "id": "4e3586ab-2430-42ec-8d2c-208d771ec659",
       "metadata": {
-        "tags": [],
-        "id": "4e3586ab-2430-42ec-8d2c-208d771ec659"
+        "id": "4e3586ab-2430-42ec-8d2c-208d771ec659",
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -140,8 +140,8 @@
       "execution_count": null,
       "id": "35c2b4e7-a1c9-4b7e-bfa0-771469e61bc5",
       "metadata": {
-        "tags": [],
-        "id": "35c2b4e7-a1c9-4b7e-bfa0-771469e61bc5"
+        "id": "35c2b4e7-a1c9-4b7e-bfa0-771469e61bc5",
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -185,8 +185,8 @@
       "execution_count": null,
       "id": "4d38ca88-bc1f-4b4b-9d02-e7aca09c7724",
       "metadata": {
-        "tags": [],
-        "id": "4d38ca88-bc1f-4b4b-9d02-e7aca09c7724"
+        "id": "4d38ca88-bc1f-4b4b-9d02-e7aca09c7724",
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -214,8 +214,8 @@
       "execution_count": null,
       "id": "a7bcceff-60dd-4603-b3df-6a1dbe6c2d12",
       "metadata": {
-        "tags": [],
-        "id": "a7bcceff-60dd-4603-b3df-6a1dbe6c2d12"
+        "id": "a7bcceff-60dd-4603-b3df-6a1dbe6c2d12",
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -243,11 +243,12 @@
       "execution_count": null,
       "id": "748ee66d-ce13-4ef8-9042-61e8dc3a46ee",
       "metadata": {
-        "tags": [],
-        "id": "748ee66d-ce13-4ef8-9042-61e8dc3a46ee"
+        "id": "748ee66d-ce13-4ef8-9042-61e8dc3a46ee",
+        "tags": []
       },
       "outputs": [],
       "source": [
+        "#Applying the missing values function to the sample_data variable\n",
         "missing_data = missing_values(sample_data)\n",
         "missing_data"
       ]
@@ -257,8 +258,8 @@
       "execution_count": 8,
       "id": "0ec2f4ef-baaa-4d95-bbbd-300638492ca4",
       "metadata": {
-        "tags": [],
-        "id": "0ec2f4ef-baaa-4d95-bbbd-300638492ca4"
+        "id": "0ec2f4ef-baaa-4d95-bbbd-300638492ca4",
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -285,12 +286,12 @@
       "execution_count": null,
       "id": "1a96abb0-c9d4-4aa5-9823-e2524a75d834",
       "metadata": {
-        "tags": [],
-        "id": "1a96abb0-c9d4-4aa5-9823-e2524a75d834"
+        "id": "1a96abb0-c9d4-4aa5-9823-e2524a75d834",
+        "tags": []
       },
       "outputs": [],
       "source": [
-        "# Apply the 'datetime' function to create datetime columns for various date fields\n",
+        "# Apply the 'datetime' function to create datetime columns for \"Today's Date\"\n",
         "sample_data = datetime(sample_data, \"Today's Date\", 'T-Day', 'T-Month', 'T-Year', \"%d-%b-%Y\", 0)"
       ]
     },
@@ -299,11 +300,12 @@
       "execution_count": null,
       "id": "fa41fde9-c380-4895-ada8-ef6afa65db38",
       "metadata": {
-        "tags": [],
-        "id": "fa41fde9-c380-4895-ada8-ef6afa65db38"
+        "id": "fa41fde9-c380-4895-ada8-ef6afa65db38",
+        "tags": []
       },
       "outputs": [],
       "source": [
+        "# Apply the 'datetime' function to create datetime columns for \"Registration Date\"\n",
         "sample_data = datetime(sample_data, \"Registration Date\", \"R-Day\", \"R-Month\", \"R-Year\", \"%d-%b-%Y\", 3)"
       ]
     },
@@ -312,11 +314,12 @@
       "execution_count": null,
       "id": "64d98ec9-a39b-49d4-9d08-7f3325fb5306",
       "metadata": {
-        "tags": [],
-        "id": "64d98ec9-a39b-49d4-9d08-7f3325fb5306"
+        "id": "64d98ec9-a39b-49d4-9d08-7f3325fb5306",
+        "tags": []
       },
       "outputs": [],
       "source": [
+        "# Apply the 'datetime' function to create datetime columns for \"Next Court Date\"\n",
         "sample_data = datetime(sample_data, \"Next Court Date\", \"N-Day\", \"N-Month\", \"N-Year\", \"%d-%b-%Y\", 9)"
       ]
     },
@@ -325,8 +328,8 @@
       "execution_count": null,
       "id": "47aefe6f-4919-4201-b6ea-4eb07bb6c2ec",
       "metadata": {
-        "tags": [],
-        "id": "47aefe6f-4919-4201-b6ea-4eb07bb6c2ec"
+        "id": "47aefe6f-4919-4201-b6ea-4eb07bb6c2ec",
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -337,23 +340,10 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "33566ece-15d3-4190-ab05-92572e8958bc",
-      "metadata": {
-        "tags": [],
-        "id": "33566ece-15d3-4190-ab05-92572e8958bc"
-      },
-      "outputs": [],
-      "source": [
-        "sample_data.head()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
       "id": "4fbd4a4c-1954-44ee-a867-b829c6df1dea",
       "metadata": {
-        "tags": [],
-        "id": "4fbd4a4c-1954-44ee-a867-b829c6df1dea"
+        "id": "4fbd4a4c-1954-44ee-a867-b829c6df1dea",
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -363,6 +353,9 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
       "language": "python",
@@ -379,9 +372,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.11.4"
-    },
-    "colab": {
-      "provenance": []
     }
   },
   "nbformat": 4,
